<resources>
    <string name="app_name">QuizApp</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_quiz_answer">QuizAnswer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">back</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="sample3">sample3</string>
    <string name="sample">sample</string>
    <string name="sample4">sample</string>
    <string name="sample1">sample1</string>
    <string name="sample2">sample2</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="hey_congratulations">Hey, Congratulations</string>
    <string name="your_score_is_9_out_of_10">Your Score is 9 out of 10</string>
    <string name="finish">FINISH</string>
    <string name="choose_theme_text">choose</string>
    <string name="education">Education</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="phone">phone</string>
</resources>